@@ -1,5 +1,9 @@
 2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
+	* stack.cpp: Fix field in exit medium.
+
+2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
 	* interface.cpp: Check if widths match.
 
 2002-05-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
